...
                        ),
                      );
                    },
                  ),
                  // Email
                  TextFormField(
                    key: const Key('login-email-field'),
                    controller: _emailController,
                    focusNode: _emailFocusNode,
                    keyboardType: TextInputType.emailAddress,
                    decoration: InputDecoration(
                      labelText: 'Email',
                      hintText: 'seu@email.com',
...
                            ),
                          ],
                        ),
                        child: Material(
                          color: AppTheme.transparent,
                          child: InkWell(
                            key: const Key('login-submit-button'),
                            borderRadius: BorderRadius.circular(
                              AppTheme.radiusMd,
                            ),
                            onTap: _handleLogin,
                            child: const Center(
                              child: Text(
...
